--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
 </div>
 <script>
     // --- IMPORTANT: CONFIGURE YOUR API ENDPOINT HERE ---
-    const API_INVOKE_URL = 'https://runt0wgiq2.execute-api.us-east-2.amazonaws.com/default';
+    const API_INVOKE_URL = '';
     // ---
     const analyzeBtn = document.getElementById('analyze-btn');
     const cityInput = document.getElementById('city-input');
